--- a/res/layout/my_chongzhi.xml
+++ b/res/layout/my_chongzhi.xml
@@ -79,29 +79,64 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp" >
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="客户编号:" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="12345" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="输入金额..."
+                android:inputType="number" >
+				
+                <requestFocus />
+            </EditText>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/spilt_line_color"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/btchongzhi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/my_btgreen"
-            android:text="充值"
+            android:text="立即充值"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
-
-        <Button
-            android:id="@+id/bttixian"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/my_btred"
-            android:textColor="@color/white"
-            android:textSize="@dimen/new_size_4"
-            android:text="提现" />
 
     </LinearLayout>
 
