--- a/res/layout/message_fragment.xml
+++ b/res/layout/message_fragment.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/tvmiaoshu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="消息" />
+ <include layout="@layout/main_top_layout" />
+    <ListView
+        android:id="@+id/lv_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
