--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -23,8 +23,16 @@
         <item name="android:windowBackground">@color/transparent_color</item>
         <item name="android:windowNoTitle">true</item>
     </style>
-
-    <style name="tab_rb_style">
+    
+    
+    <style name="chance_offer_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/color_2</item>
+        <item name="android:textSize">@dimen/new_size_2</item>
+         <item name="android:textColorHint">@color/color_4</item>
+    </style>
+<style name="tab_rb_style">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
