--- a/res/layout/guide_layout.xml
+++ b/res/layout/guide_layout.xml
@@ -21,7 +21,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
-      android:layout_marginBottom="70dp"
+      android:layout_marginBottom="60dp"
       android:orientation="vertical" >
 
       <LinearLayout
@@ -29,6 +29,7 @@
           android:layout_height="wrap_content"
           android:background="#00000000"
           android:layout_gravity="center"
+          android:visibility="gone"
           android:orientation="horizontal" >
 
           <ImageButton
@@ -54,15 +55,17 @@
 
       <RelativeLayout
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="5dp" >
+          android:layout_height="wrap_content" >
 
           <Button
               android:id="@+id/bt_guide_register"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true" 
-              android:background="@drawable/bt_register"
+              android:background="@drawable/btn_register"
+              android:text="用户注册"
+              android:textColor="@color/white"
+              android:textSize="@dimen/new_size_4"
               />
 
           <Button
@@ -70,7 +73,11 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true" 
-              android:background="@drawable/bt_login"/>
+              android:background="@drawable/btn_login"
+               android:text="用户登录"
+              android:textColor="@color/white"
+              android:textSize="@dimen/new_size_4"
+              />
 
       </RelativeLayout>
 
