--- a/res/layout/main_top_edit_layout.xml
+++ b/res/layout/main_top_edit_layout.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/btn_gobackl"
         android:onClick="goBack"
@@ -31,9 +31,10 @@
         android:id="@+id/main_top_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="6"
+        android:paddingLeft="5dp"
         android:background="@drawable/near_etbg"
         android:hint="搜索"
         android:singleLine="true"
@@ -44,6 +45,7 @@
         android:id="@+id/main_top_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
         android:background="@color/main_red"
         android:gravity="center"
