--- a/res/layout/my_fansziliaobianjihead.xml
+++ b/res/layout/my_fansziliaobianjihead.xml
@@ -15,8 +15,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
-
-            <LinearLayout
+<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -100,12 +99,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
-                android:layout_weight="1"
                 android:gravity="center" >
 
                 <ImageView
@@ -133,19 +131,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_weight="1"
                 android:background="@color/bggray"
                 android:orientation="vertical" >
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_weight="1"
                 android:gravity="center_vertical" >
 
                 <LinearLayout
@@ -204,25 +201,24 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="8分钟前" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_weight="1"
                 android:background="@color/bggray"
                 android:orientation="vertical" >
+
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/lneardongtai"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
                 android:gravity="center_vertical" >
 
                 <LinearLayout
@@ -236,7 +232,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
-                        android:text="她的动态" />
+                        android:text="我的动态" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -245,6 +241,7 @@
                         android:layout_weight="1"
                         android:text="317"
                         android:textColor="@color/bt_red" />
+
                 </LinearLayout>
 
                 <ImageView
@@ -274,6 +271,7 @@
                         android:layout_weight="1"
                         android:text="200m"
                         android:textColor="@color/bggray" />
+
                 </LinearLayout>
 
                 <ImageView
@@ -282,22 +280,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/f10_45" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_weight="1"
                 android:background="@color/bggray"
                 android:orientation="vertical" >
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
                 android:orientation="vertical" >
 
                 <LinearLayout
@@ -552,44 +549,15 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/TextView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="发布的通告" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:orientation="vertical" >
-
-                        <ListView
-                            android:id="@+id/ltonggao"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" >
-                        </ListView>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
-                            android:orientation="vertical" >
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
             </LinearLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/bt_green"
+        android:textColor="@color/white"
+        android:text="保存资料" />
         </LinearLayout>
-
     </ScrollView>
 
 </LinearLayout>
