--- a/res/layout/my_work.xml
+++ b/res/layout/my_work.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
+
 <include layout="@layout/main_top_layout" />
 
 
@@ -40,7 +42,7 @@
 
 
 <ListView
-    android:id="@+id/listView1"
+    android:id="@+id/lwork"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 </ListView>
