--- a/res/layout/near_list_item.xml
+++ b/res/layout/near_list_item.xml
@@ -94,7 +94,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imgdelete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
