--- a/res/layout/user_fragment.xml
+++ b/res/layout/user_fragment.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/lmydongtai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -99,6 +100,7 @@
             android:background="@color/white" >
 
             <LinearLayout
+                android:id="@+id/lmyhaoyou"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -119,6 +121,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lmytuijian"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -139,6 +142,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lmyguanzhu"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -159,6 +163,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lmyfans"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -190,10 +195,11 @@
                 android:orientation="vertical" >
 
                 <LinearLayout
+                    android:id="@+id/lmyqianbao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:background="@color/white" >
+                    android:background="@color/white"
+                    android:gravity="center_vertical" >
 
                     <ImageView
                         android:id="@+id/imageView5"
@@ -226,6 +232,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lmywork"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -262,6 +269,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lmyfuwu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -298,6 +306,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lheimingdan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
