--- a/res/layout/dynamic_add_info.xml
+++ b/res/layout/dynamic_add_info.xml
@@ -56,7 +56,7 @@
 			        android:src="@drawable/d10_16" />
 
 			    <ImageView
-			        android:id="@+id/imageView2"
+			        android:id="@+id/iv_dynamic_add"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:src="@drawable/d11_03" />
