--- a/res/layout/guide_layout.xml
+++ b/res/layout/guide_layout.xml
@@ -62,7 +62,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true" 
-              android:background="@drawable/btn_register"
+              android:background="@drawable/btn_guide_register"
               android:text="用户注册"
               android:textColor="@color/white"
               android:textSize="@dimen/new_size_4"
@@ -73,7 +73,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true" 
-              android:background="@drawable/btn_login"
+              android:background="@drawable/btn_guide_login"
                android:text="用户登录"
               android:textColor="@color/white"
               android:textSize="@dimen/new_size_4"
