--- a/res/layout/message_list_item.xml
+++ b/res/layout/message_list_item.xml
@@ -1,72 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="58dp"
+    android:background="@color/white"
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical"
     android:paddingBottom="10dp"
     android:paddingTop="10dp" >
 
     <ImageView
-        android:id="@+id/iv_dynamic_head"
+        android:id="@+id/iv_chat_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/m3_03" />
+
+    <TextView
+        android:id="@+id/tv_chat_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:src="@drawable/dynamic_head_xh" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/iv_dynamic_head"
-        android:orientation="vertical" >
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/tv_message_name"
+        android:layout_toRightOf="@id/iv_chat_icon"
+        android:textColor="@color/color_4"
+        android:text="华谊兄弟"
+        android:textSize="@dimen/new_size_2" />
+   				 <ImageView
+                android:id="@+id/iv_chat_sex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="华谊兄弟"
-                android:textColor="@color/color_4"
-                android:textSize="@dimen/new_size_2" />
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/tv_message_name"
+                android:layout_toRightOf="@+id/tv_chat_name"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_centerVertical="true"
+                android:layout_alignTop="@id/tv_chat_name"
                 android:src="@drawable/f3_13" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:text="22:12"
-                android:textColor="@color/color_4"
-                android:textSize="@dimen/new_size_1" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="谢谢亲们的祝福!我已经收到了"
+    <TextView
+        android:id="@+id/tv_chat_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/iv_chat_icon"
+        android:layout_alignLeft="@id/tv_chat_name"
+        android:text="谢谢亲们的祝福!我已经收到了"
             android:textColor="@color/color_2"
-            android:textSize="@dimen/new_size_2" />
+            android:textSize="@dimen/new_size_2"/>
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_chat_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/tv_chat_name"
+        android:layout_marginRight="15dp"
+                android:text="22:12"
+        android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_1"/>
 
-</LinearLayout>
+</RelativeLayout>
