--- a/res/layout/chance_fragment.xml
+++ b/res/layout/chance_fragment.xml
@@ -2,47 +2,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_white"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <include layout="@layout/main_top_find_layout" />
 
-			<RadioGroup
-			    android:id="@+id/radioGroup"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginBottom="10dp"
-			    android:layout_marginLeft="20dp"
-			    android:layout_marginRight="20dp"
-			    android:layout_marginTop="10dp"
-			    android:contentDescription="职位"
-			    android:orientation="horizontal" >
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="职位"
+        android:orientation="horizontal" >
 
-                    <RadioButton
-                        android:id="@+id/radioButton1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@null"
-                        android:background="@drawable/btn_chance_new"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
+        <RadioButton
+            android:id="@+id/radioButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_chance_new"
+            android:button="@null"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_2" />
 
-                    <RadioButton
-                        android:id="@+id/radioButton2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@null"
-                        android:background="@drawable/btn_chance_hot"
-                        android:checked="true"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_chance_hot"
+            android:button="@null"
+            android:checked="true"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_2" />
+    </RadioGroup>
 
-                </RadioGroup>
-
-			<ListView
-			    android:id="@+id/lv_chance"
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content" >
-			</ListView>
+    <ListView
+        android:id="@+id/lv_chance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#000000"
+        android:divider="@null"
+        android:layout_marginBottom="20dp"
+        android:dividerHeight="1dp" >
+    </ListView>
 
 </LinearLayout>
