--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/login_bt_color"
+            android:background="@drawable/btn_green"
             android:text="@string/login"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
