--- a/res/layout/message_chat_right.xml
+++ b/res/layout/message_chat_right.xml
@@ -45,7 +45,7 @@
  				    android:background="@drawable/me17_05"
  				    android:clickable="true"
  				    android:focusable="true"
- 				    android:gravity="left|center"
+ 				    android:gravity="left|center_vertical"
  				    android:lineSpacingExtra="2dp"
  				    android:minHeight="40dp"
  				    android:text="谢谢   我这个是测试  "
