--- a/res/layout/message_fragment.xml
+++ b/res/layout/message_fragment.xml
@@ -2,12 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
  <include layout="@layout/main_top_layout" />
-    <ListView
+
+     <com.timetalent.client.ui.view.ListViewCompat
         android:id="@+id/lv_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="#dddbdb"
+        android:dividerHeight="1.0px"
+        android:drawSelectorOnTop="false"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none" />
 
 </LinearLayout>
