--- a/res/layout/register_four_layout.xml
+++ b/res/layout/register_four_layout.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/main_red"
+            android:background="@drawable/btn_red"
             android:text="@string/register_four_over"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
